# trinket

./: .gitignore  CMakeLists.txt  README.md  backlight.c  backlight.h  cpfrtoh.py  lcd.c  lcd.h  prog.c  template.ssv  trinket.c  trinket.h  trinketparser.c  trinketparser.h
3d-files/: Cap.stl  Case.stl  hookback.stl  hookfront.stl
framemaker/: package-lock.json  package.json
framemaker/public/: index.html
framemaker/src/: AnimationController.ts  App.css  App.tsx  App.tsx.css  Defaults.tsx  Frame.ts
framemaker/src/components/: Button.tsx  Button.tsx.css  CharCounter.tsx  CharCounter.tsx.css  CompileWindow.tsx  CompileWindow.tsx.css  FrameEditor.tsx  FrameEditor.tsx.css  LCD.tsx  LCD.tsx.css
